Fixed styling problems introduced to previewed data table during importing stage, as introduced by recent changes to get the data table's headers stuck. Some refactoring to gdata extension to prepare for other types of document.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@2231 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/styles/views/data-table-view.less
+++ b/main/webapp/modules/core/styles/views/data-table-view.less
@@ -107,13 +107,19 @@ table.data-table > tbody > tr.contextual > td > div {
   opacity: 0.3;
   }
 
-table.data-header-table td.column-header {
+table.data-header-table td.column-header, table.data-table td.column-header {
   vertical-align: top;
   white-space: nowrap;
   cursor: pointer;
   padding: 4px 6px 4px 4px;
   border-bottom: none;
   font-weight: bold;
+  }
+
+/* For the preview in the importing stage */
+table.data-table td.column-header {
+  background: @fill_primary;
+  border-bottom: 2px solid @chrome_primary;
   }
 
 .column-header-name {
